<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:gyrocraft="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.DialogActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <com.technion.gyrocraft.custom_widgets.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_score"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/bright_yellow"
        android:textSize="@dimen/main_button_size"
        gyrocraft:fontName="cargo.ttf"
        android:id="@+id/dialog_end_final_score"/>
    <com.technion.gyrocraft.custom_widgets.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/restart"
        android:padding="15dp"
        android:clickable="true"
        android:onClick="restartGame"
        android:textColor="@color/bright_orange"
        android:textSize="@dimen/main_button_size"
        gyrocraft:fontName="cargo.ttf"/>
    <com.technion.gyrocraft.custom_widgets.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:gravity="center"
        android:onClick="returnToMain"
        android:clickable="true"
        android:padding="15dp"

        android:textColor="@color/bright_orange"
        android:textSize="@dimen/main_button_size"
        gyrocraft:fontName="cargo.ttf"/>
    </LinearLayout>
</RelativeLayout>
