<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:gyrocraft="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.DialogActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <com.technion.gyrocraft.custom_widgets.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_high_score"
        android:gravity="center"
        android:textColor="@color/bright_yellow"
        android:textSize="25sp"
        android:id="@+id/score_dialog_title"
        gyrocraft:fontName="cargo.ttf"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.technion.gyrocraft.custom_widgets.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/bright_yellow"
        android:textSize="25sp"
        gyrocraft:fontName="cargo.ttf"
        android:id="@+id/dialog_score_final_score"/>
    <EditText
        android:layout_width="match_parent"
        android:gravity="center"
        android:singleLine="true"
        android:hint="Enter Nickname"
        android:layout_height="wrap_content"
        android:id="@+id/high_score_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.technion.gyrocraft.custom_widgets.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:gravity="center"
                android:onClick="continueToEnd"
                android:layout_gravity="left"
                android:foregroundGravity="left"
                android:clickable="true"
                android:padding="10dp"
                android:textColor="@color/bright_orange"
                android:textSize="25sp"
                gyrocraft:fontName="cargo.ttf"/>
    <com.technion.gyrocraft.custom_widgets.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit"
        android:gravity="right"
        android:onClick="submitScore"
        android:clickable="true"
        android:padding="10dp"
        android:layout_gravity="right"
        android:foregroundGravity="right"
        android:textColor="@color/dark_orange"
        android:textSize="25sp"
        gyrocraft:fontName="cargo.ttf"/>

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
